# StickFright

./: .gitignore  CMakeLists.txt  README.md  main.cpp
basecnst/: glpack.h  symbols.h
game/: game.h
reallizations/: game_game.cpp
